force-app/main/default/objects/ObjectC__c/ObjectC__c.object-meta.xml
<CustomObject>
    <label>ObjectC</label>
    <nameField>
        <label>ObjectC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjectCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>