force-app/main/default/objects/ObjectC__c/fields/FieldC1__c.field-meta.xml
<CustomField>
    <fullName>FieldC1__c</fullName>
    <label>FieldC1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>