force-app/main/default/objects/ObjectC__c/fields/FieldC2__c.field-meta.xml
<CustomField>
    <fullName>FieldC2__c</fullName>
    <label>FieldC2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>