force-app/main/default/objects/ObjectC__c/fields/LinkToObjectA__c.field-meta.xml
<CustomField>
    <fullName>LinkToObjectA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LinkToObjectA</label>
    <referenceTo>ObjectA__c</referenceTo>
    <relationshipLabel>LinkCToAs</relationshipLabel>
    <relationshipName>LinkCToA</relationshipName>
    <type>Lookup</type>
</CustomField>